--- a/ApiPlatform/composer.json
+++ b/ApiPlatform/composer.json
@@ -6,12 +6,14 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "antishov/doctrine-extensions-bundle": "^1.4",
+        "api-platform/core": "^2.1",
         "composer/package-versions-deprecated": "^1.10",
         "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-bundle": "^1.6 || ^2.0",
         "doctrine/doctrine-migrations-bundle": "^3.0",
-        "doctrine/orm": "^2.7",
-        "phpdocumentor/reflection-docblock": "^5.1",
+        "doctrine/orm": "^2.4.5",
+        "nelmio/cors-bundle": "^1.5 || ^2.0",
+        "phpdocumentor/reflection-docblock": "^3.0 || ^4.0 || ^5.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
