--- a/ApiPlatform/.env
+++ b/ApiPlatform/.env
@@ -35,3 +35,12 @@ DATABASE_URL=mysql://petrero:mysqladmin@127.0.0.1:3306/api_platform?serverVersio
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
+JWT_SECRET_KEY=%kernel.project.dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project.dir%/config/jwt/public.pem
+JWT_PASSPHRASE='WhoIsGeorge?'
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=583957e58e771dab6883c0f70abcd76f
+###< lexik/jwt-authentication-bundle ###
