--- a/ApiPlatform/.gitignore
+++ b/ApiPlatform/.gitignore
@@ -7,6 +7,8 @@
 /public/bundles/
 /var/
 /vendor/
+config/jwt/
+.env
 ###< symfony/framework-bundle ###
 
 ###> symfony/phpunit-bridge ###
@@ -14,3 +16,7 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
