--- a/ApiPlatform/config/packages/security.yaml
+++ b/ApiPlatform/config/packages/security.yaml
@@ -39,3 +39,8 @@ security:
     access_control:
 #        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
+    role_hierarchy:
+        ROLE_WRITER: ROLE_COMENTATOR
+        ROLE_ADMIN: [ROLE_WRITER, ROLE_EDITOR]
+        ROLE_SUPERADMIN: ROLE_ADMIN
