--- a/ApiPlatform/config/packages/security.yaml
+++ b/ApiPlatform/config/packages/security.yaml
@@ -25,7 +25,8 @@ security:
                 failure_handler:    lexik_jwt_authentication.handler.authentication_failure
             guard:
                 authenticators:
-                    - lexik_jwt_authentication.jwt_token_authenticator
+#                   - lexik_jwt_authentication.jwt_token_authenticator
+                    - App\Security\TokenAuthenticator
 
 
             # activate different ways to authenticate
