88. Implementing UserChecker to verify if account is enabled(Section 13: API Platform - Custom Resource, E-mail Sending (User))
Stop authorization if user account is disabled.

--- a/ApiPlatform/config/packages/security.yaml
+++ b/ApiPlatform/config/packages/security.yaml
@@ -28,7 +28,7 @@ security:
 #                   - lexik_jwt_authentication.jwt_token_authenticator
                     - App\Security\TokenAuthenticator
 
-
+            user_checker: App\Security\UserEnabledChecker
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
