94. Install and configure Mailer(Section 13: API Platform - Custom Resource, E-mail Sending (User))
Run: composer require symfony/mailer
Configure mailer to send emails to mailtrap.io

--- a/ApiPlatform/.env
+++ b/ApiPlatform/.env
@@ -21,7 +21,7 @@ APP_SECRET=a3282ed4a61ef6530ad794e8f5d94a08
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+ MAILER_DSN=smtp://2e866bdc6e463a:70a4d38796886f@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
