--- a/ApiPlatform/config/packages/vich_uploader.yaml
+++ b/ApiPlatform/config/packages/vich_uploader.yaml
@@ -1,7 +1,9 @@
 vich_uploader:
     db_driver: orm
 
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+    mappings:
+      products:
+        uri_prefix: /uploads
+        upload_destination: '%kernel.project_dir%/public/uploads'
+        # decide how uploaded files would be renamed
+        namer: Vich\UploaderBundle\Naming\UniqidNamer
