--- a/ApiPlatform/config/packages/vich_uploader.yaml
+++ b/ApiPlatform/config/packages/vich_uploader.yaml
@@ -2,8 +2,8 @@ vich_uploader:
     db_driver: orm
 
     mappings:
-      products:
-        uri_prefix: /uploads
-        upload_destination: '%kernel.project_dir%/public/uploads'
+      images:
+        uri_prefix: /uploads/images
+        upload_destination: '%kernel.project_dir%/public/uploads/images'
         # decide how uploaded files would be renamed
         namer: Vich\UploaderBundle\Naming\UniqidNamer
