--- a/ApiPlatform/config/packages/api_platform.yaml
+++ b/ApiPlatform/config/packages/api_platform.yaml
@@ -5,3 +5,6 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+    collection:
+        pagination:
+            page_parameter_name: _page
