--- a/ApiPlatform/config/packages/api_platform.yaml
+++ b/ApiPlatform/config/packages/api_platform.yaml
@@ -7,6 +7,7 @@ api_platform:
         versions: [3]
     collection:
         pagination:
-            page_parameter_name: _page
-            client_enabled: true
-            enabled_parameter_name: pagination
+            #page_parameter_name: _page
+            #client_enabled: true
+            #enabled_parameter_name: pagination
+            items_per_page: 15
