--- a/ApiPlatform/config/packages/api_platform.yaml
+++ b/ApiPlatform/config/packages/api_platform.yaml
@@ -11,3 +11,6 @@ api_platform:
             #client_enabled: true
             #enabled_parameter_name: pagination
             items_per_page: 15
+            client_items_per_page: true #false by default
+            items_per_page_parameter_name: itemsPerPage
+            maximum_items_per_page: 20
