--- a/ApiPlatform/config/packages/api_platform.yaml
+++ b/ApiPlatform/config/packages/api_platform.yaml
@@ -14,4 +14,6 @@ api_platform:
             client_items_per_page: true #false by default
             items_per_page_parameter_name: itemsPerPage
             maximum_items_per_page: 20
-            partial: true
+            partial: false
+            client_partial: true
+            partial_parameter_name: partial
