--- a/ApiPlatform/phpunit.xml.dist
+++ b/ApiPlatform/phpunit.xml.dist
@@ -30,4 +30,8 @@
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
+
+    <extensions>
+        <extension class="App\Tests\BypassFinalHook"/>
+    </extensions>
 </phpunit>
