139. Installing Behat &amp; all extensions, first suite run(Section 20: API Platform - Functional Testing (Behat))
Run:
  - composer require --dev behat/behat
  - composer require --dev friends-of-behat/mink
    mink is a browser emulator written in php
  - composer require --dev friends-of-behat/mink-extension
  - composer require --dev friends-of-behat/symfony-extension
  - composer require --dev behatch/contexts
  - composer require --dev coduo/php-matcher
    we'll use that to verify that Jason returned is what we have expected.
  - composer require --dev friends-of-behat/mink-browserkit-driver

--- a/ApiPlatform/.gitignore
+++ b/ApiPlatform/.gitignore
@@ -21,3 +21,7 @@ config/jwt/
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+###> friends-of-behat/symfony-extension ###
+/behat.yml
+###< friends-of-behat/symfony-extension ###
