--- a/ApiPlatform/.env.test
+++ b/ApiPlatform/.env.test
@@ -3,3 +3,6 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
+
+DATABASE_URL=mysql://petrero:mysqladmin@127.0.0.1:3306/api_platform_test?serverVersion=5.7
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
